src/styles/globals.css
@import "tailwindcss";

@custom-variant dark (&:is(.dark *));

/*=============================================
=            CSS Variable Definitions         =
=============================================*/

/* Light Theme Variables */
:root {
  /* General */
  --background: hsl(0 0% 100%);
  --foreground: hsl(240 10% 3.9%);

  /* Text Colors */
  --header-login: hsl(0, 0%, 0%);
  --description-login: hsl(0, 0%, 60%);

  /* Login */
  --login-credentials: hsl(0 0% 100%);

  /* Buttons */
  --secondary-button: oklch(0.24 0.0078 274.61);

  /* Card */
  --card: hsl(0 0% 100%);
  --card-foreground: hsl(240 10% 3.9%);

  /* Popover */
  --popover: hsl(0 0% 100%);
  --popover-foreground: hsl(240 10% 3.9%);

  /* Primary Colors */
  --primary: oklch(0.51 0.1733 256.59);
  --primary-foreground: hsl(0 0% 98%);

  /* Secondary Colors */
  --secondary: hsl(240 4.8% 95.9%);
  --secondary-foreground: hsl(240 5.9% 10%);

  /* UI Colors */
  --muted: hsl(240 4.8% 95.9%);
  --muted-foreground: hsl(240 3.8% 46.1%);
  --accent: hsl(240 4.8% 95.9%);
  --accent-foreground: hsl(240 5.9% 10%);
  --destructive: hsl(0 84.2% 60.2%);
  --destructive-foreground: hsl(0 0% 98%);

  /* Border & Input */
  --border: hsl(240 3.8% 46.1%);
  --input: oklch(0.19 0.0051 248.1);
  --ring: hsl(240 10% 3.9%);

  /* Chart Colors */
  --chart-1: hsl(12 76% 61%);
  --chart-2: hsl(173 58% 39%);
  --chart-3: hsl(197 37% 24%);
  --chart-4: hsl(43 74% 66%);
  --chart-5: hsl(27 87% 67%);
  --chart-6: hsl(240 43% 44%);

  /* Border Radius */
  --radius: 0.5rem;

  /* Sidebar Colors */
  --sidebar-background: hsl(0 0% 98%);
  --sidebar-foreground: hsl(240 5.3% 26.1%);
  --sidebar-primary: hsl(240 5.9% 10%);
  --sidebar-primary-foreground: hsl(0 0% 98%);
  --sidebar-accent: hsl(240 4.8% 95.9%);
  --sidebar-accent-foreground: hsl(240 5.9% 10%);
  --sidebar-border: hsl(220 13% 91%);
  --sidebar-ring: hsl(217.2 91.2% 59.8%);
}

/* Dark Theme Variables */
.dark {
  /* General */
  --background: oklch(0.11 0 0);
  --foreground: oklch(1 0 0);

  /* Text Colors */
  --header-login: oklch(0.98 0 0);
  --description-login: oklch(1 0 0 / 50%);

  /* Login */
  --login-credentials: oklch(0.19 0.0051 248.1);

  /* Card */
  --card: oklch(0.19 0.0051 248.1);
  --card-foreground: oklch(1 0 0);

  /* Popover */
  --popover: oklch(0.14 0.0044 285.82);
  --popover-foreground: oklch(0.98 0 0);

  /* Primary Colors */
  --primary: oklch(0.51 0.1733 256.59);
  --primary-foreground: oklch(0.21 0.0059 285.88);

  /* Buttons */
  --secondary-button: oklch(0.24 0.0078 274.61);

  /* Secondary Colors */
  --secondary: oklch(0.24 0.0078 274.61);
  --secondary-foreground: oklch(0.98 0 0);

  /* UI Colors */
  --muted: oklch(0.27 0.0055 286.03);
  --muted-foreground: oklch(0.98 0 0);
  --accent: oklch(0.27 0.0055 286.03);
  --accent-foreground: oklch(0.98 0 0);
  --warning: oklch(0.79 0.171176 70.1526);
  --destructive: oklch(0.57 0.209 22.65);
  --destructive-foreground: hsl(0 0% 98%);

  /* Border & Input */
  --border: hsl(240 3.7% 15.9%);
  --input: oklch(0.27 0.0055 286.03);
  --ring: oklch(0.27 0.0055 286.03);

  /* Chart Colors */
  --chart-1: hsl(220 70% 50%);
  --chart-2: hsl(160 60% 45%);
  --chart-3: hsl(30 80% 55%);
  --chart-4: hsl(280 65% 60%);
  --chart-5: hsl(340 75% 55%);
  --chart-6: hsl(240 43% 44%);

  /* Sidebar Colors */
  --sidebar-background: hsl(240 5.9% 10%);
  --sidebar-foreground: hsl(240 4.8% 95.9%);
  --sidebar-primary: hsl(224.3 76.3% 48%);
  --sidebar-primary-foreground: hsl(0 0% 100%);
  --sidebar-accent: hsl(240 3.7% 15.9%);
  --sidebar-accent-foreground: hsl(240 4.8% 95.9%);
  --sidebar-border: hsl(240 3.7% 15.9%);
  --sidebar-ring: hsl(217.2 91.2% 59.8%);
}

/* Inline Theme Variables */
@theme inline {
  /* Fonts */
  --font-inter:
    var(--font-inter), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    "Helvetica Neue", Arial, sans-serif;
  --font-ingram:
    var(--font-ingram), ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    "Liberation Mono", "Courier New", monospace;

  /* Colors */
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);

  /* Text Colors */
  --color-header-login: var(--header-login);
  --color-description-login: var(--description-login);

  /* Login */
  --color-login-credentials: var(--login-credentials);

  /* Card & Popover */
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);

  /* UI Colors */
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-warning: var(--warning);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);

  /* Chart Colors */
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);

  /* Border Radius */
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  /* Sidebar Colors */
  --color-sidebar: var(--sidebar-background);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  /* Animations */
  --animate-accordion-down: accordion-down 0.2s ease-out;
  --animate-accordion-up: accordion-up 0.2s ease-out;
  --animate-fade-down: fade-down 0.5s;
  --animate-fade-up: fade-up 0.5s;
  --animate-stroke-dashoffset: stroke-dashoffset 0.2s linear forwards;
}

/*=============================================
=            Keyframe Animations             =
=============================================*/

@keyframes fade-down {
  0% {
    opacity: 0;
    transform: translateY(-10px);
  }
  80% {
    opacity: 0.6;
  }
  100% {
    opacity: 1;
    transform: translateY(0px);
  }
}
@keyframes fade-up {
  0% {
    opacity: 0;
    transform: translateY(10px);
  }
  80% {
    opacity: 0.6;
  }
  100% {
    opacity: 1;
    transform: translateY(0px);
  }
}
@keyframes accordion-down {
  from {
    height: 0;
  }
  to {
    height: var(--radix-accordion-content-height);
  }
}
@keyframes accordion-up {
  from {
    height: var(--radix-accordion-content-height);
  }
  to {
    height: 0;
  }
}
@keyframes stroke-dashoffset {
  0% {
    stroke-dashoffset: 100%;
  }
  100% {
    stroke-dashoffset: 0;
  }
}

/*=============================================
=            Base Layer Styles                =
=============================================*/

@layer base {
  /* Global Styles */
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground font-inter;
  }

  /* Link Styles */
  a:has(code) {
    @apply !no-underline;
  }

  /* Font Styles */
  .font-inter {
    font-family: var(--font-inter);
    font-feature-settings:
      "cv01" 1,
      "dlig" 1,
      "cv02" 1,
      "cv03" 1,
      "cv04" 1,
      "cv09" 1,
      "cv10" 1,
      "cv06" 1,
      "zero" 1,
      "calt" 1,
      "ccmp" 1,
      "ss01" 1,
      "ss02" 1,
      "ss03" 1;
  }

  .font-ingram {
    font-family: var(--font-ingram);
  }

  /* Custom Scrollbar Styles */
  /**
   * @see https://github.com/shadcn-ui/ui/blob/main/apps/www/styles/globals.css#L98
   */
  ::-webkit-scrollbar {
    width: 5px;
  }
  ::-webkit-scrollbar-track {
    background: transparent;
  }
  ::-webkit-scrollbar-thumb {
    background: hsl(var(--border));
    border-radius: 5px;
  }
  * {
    scrollbar-width: thin;
    scrollbar-color: hsl(var(--border)) transparent;
  }
}

/*=============================================
=          Component Layer Styles             =
=============================================*/

@layer components {
  /* Rehype Pretty Code */
  [data-rehype-pretty-code-figure] figure {
    @apply bg-secondary/50! border-none;
  }

  [data-line] span {
    @apply text-[var(--shiki-light)] dark:text-[var(--shiki-dark)];
  }
}

/*=============================================
=            Utility Classes                  =
=============================================*/

@utility component-block {
  & pre {
    @apply max-h-[432.4px];
  }

  [data-rehype-pretty-code-figure] figure {
    @apply my-4! rounded-none!;
  }
}

@utility mdx {
  & table {
    @apply my-2.5 rounded-md;
  }

  & table tr {
    @apply bg-transparent hover:bg-transparent;
  }

  & table th {
    @apply bg-accent/50;
  }
}

@utility auto-type-table {
  & table {
    @apply w-full rounded-md;
  }

  & table tr {
    @apply bg-transparent hover:bg-transparent;
  }

  & table th {
    @apply bg-accent/50;
  }

  & table td {
    @apply align-top whitespace-pre-wrap;
  }

  & table td:nth-child(1),
  & table th:nth-child(1) {
    @apply w-[20%];
  }

  & table td:nth-child(2),
  & table th:nth-child(2) {
    @apply w-[40%];
  }

  & table td:nth-child(3),
  & table th:nth-child(3) {
    @apply w-[20%];
  }
}

@utility data-table-container {
  & table {
    @apply my-0 rounded-none border-none;
  }

  & table td,
  & table th {
    @apply w-auto border-x-0 border-t-0;
  }
}

